Fix hero-input width issue on firefox

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -73,7 +73,8 @@
 }
 
 .App-hero-input {
-  flex-grow: 3;
+  flex: 4 1 auto;
+  width: 0;
   margin-right: 12px;
   padding: 10px;
   vertical-align: middle;
@@ -83,7 +84,7 @@
 }
 
 .App-hero-button {
-  flex-grow: 1;
+  flex: 1;
 }
 
 @media only screen and (max-width: 425px) {
